18.9.7 (ws)
      - did not read Repeat() symbols
      (dk)
      - add D.C., D.C. al fine, D.S., D.S. al fine, fine
      - ToDo : all Coda, al segno, "Faulenzer"
17.9.7 (ws)
      - add function: delete repeat text/symbols
      - add TextStyles to saved style
      - fixed saving style
      - TextStyleDialog is now modal
      - move textStyles to Score()
16.9.7 (ws)
      - fixed crash, when reached score end in note entry mode
      - updated russian translation from Alexandre Prokoudine
      - set translator before initializing shortcuts; this fixed translations
        for all shortcuts
15.9.7 (lv)
      - enhanced iotest and updated MusicXML testfiles, most work OK now
      ======== Version 0.7.0 released =============
15.9.7 (ws)
      - fixed windows version: added hack to provide windows version with fixed, hard
        coded symbol bounding boxes; svg vector graphics works after installing
        appropriate qt plugins
14.9.7 (ws)
      - more fixes for windows cross compilation, but there are at least
        two showstoppers for the windows version:
            - symbol bounding boxes are wrong (too big); this hopefully will be
              fixed in qt4.4
            - i could not manage to get the svg vector graphics work for unknown
              reasons
      - fixed quirk in start/stop/pause sequencer logic
      - fixed shortcuts configuration
      - added new class ColorLabel()
      - fix note entry in second staff
13.9.7 (ws)
      - fixed windows cross compilation (due to some fixed paths this
        probably will only work on my system :-()
      - new class Repeat() which collects all symbols with special
        repeat semantic
      - new bar line type for end-start repeat
      - duplicate time signatures when inserting/appending new staff
10.9.7  (ws)
      - move padState to Score()
      - freeze "encodingDate" in MusicXML export in debugMode
9.9.7  (ws)
      - add "doFormat()" before exporting with "-o" command line option