@@ -110,6 +110,11 @@
        <string>Numbers</string>
       </property>
      </item>
+     <item>
+      <property name="text" >
+       <string>Beams</string>
+      </property>
+     </item>
     </widget>
    </item>
    <item row="0" column="1" >
@@ -121,7 +126,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="page2" >
       <layout class="QGridLayout" >
@@ -542,6 +547,108 @@
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="Seite" >
+      <layout class="QGridLayout" >
+       <item row="0" column="0" >
+        <widget class="QLabel" name="label_26" >
+         <property name="text" >
+          <string>beam width</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1" >
+        <widget class="QDoubleSpinBox" name="beamWidth" />
+       </item>
+       <item row="1" column="0" >
+        <widget class="QLabel" name="label_27" >
+         <property name="text" >
+          <string>beam distance</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" >
+        <widget class="QDoubleSpinBox" name="beamDistance" />
+       </item>
+       <item row="2" column="0" >
+        <widget class="QLabel" name="label_28" >
+         <property name="text" >
+          <string>min. len</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1" >
+        <widget class="QDoubleSpinBox" name="beamMinLen" />
+       </item>
+       <item row="3" column="0" >
+        <widget class="QLabel" name="label_29" >
+         <property name="text" >
+          <string>min. slope</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1" >
+        <widget class="QDoubleSpinBox" name="beamMinSlope" >
+         <property name="maximum" >
+          <double>1.000000000000000</double>
+         </property>
+         <property name="singleStep" >
+          <double>0.100000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0" >
+        <widget class="QLabel" name="label_30" >
+         <property name="text" >
+          <string>max. slope</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>61</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="4" column="1" >
+        <widget class="QDoubleSpinBox" name="beamMaxSlope" >
+         <property name="maximum" >
+          <double>1.000000000000000</double>
+         </property>
+         <property name="singleStep" >
+          <double>0.100000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2" >
+        <widget class="QLabel" name="label_31" >
+         <property name="text" >
+          <string>spaces</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2" >
+        <widget class="QLabel" name="label_32" >
+         <property name="text" >
+          <string>spaces</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2" >
+        <widget class="QLabel" name="label_33" >
+         <property name="text" >
+          <string>beam width units</string>
+         </property>
         </widget>
        </item>
       </layout>
